Add some notes to file transform restaurant

--- a/02_transform_restaurant/02_transform_restaurant_rouhong_kat.ipynb
+++ b/02_transform_restaurant/02_transform_restaurant_rouhong_kat.ipynb
@@ -6,39 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# some zip-code has \"-\" xxxxx-xxx --> drop \"-\" --> keep first 5 digits - DONE \n",
-    "\n",
-    "# Do we need to add ids? - To be done in SQL as part of Load\n",
-    "\n",
-    "# Drop duplicates in restaurant - DONE\n",
-    "\n",
-    "# drop the irrelevant columns (only 4 columns left) - Ruohong to do\n",
-    "\n",
-    "# Get the zip, city, state into a seperate table - DONE\n",
-    "\n",
-    "# Export all files to CSV - ZIP Code one done; Riohong to do Restaurant one"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Dependencies\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -218,13 +192,13 @@
        "4  http://www.steaknshake.com/locations/23851-ste...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# imports the csv file as pandas dataframe\n",
+    "# Import the csv file as pandas dataframe\n",
     "csv_file_one = \"../00_input/datafiniti-fast-food-restaurants-across-america/Datafiniti_Fast_Food_Restaurants.csv\"\n",
     "restaurant_df = pd.read_csv(csv_file_one)\n",
     "restaurant_df.head()"
@@ -234,12 +208,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Checking the datafrmae before transformation "
+    "#### Check the dataframe before transformation "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -280,8 +254,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Following section will perform transformation: dropping deplications in \"Key\" column, so that restaurants will be  unique. \n",
-    "#### Data analysts will have clean data in the database. "
+    "#### Drop duplicates in \"keys\" column so that restaurants will be unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9343"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# There are only 9343 unique restaurants out of 10,000 rows in the dataframe.\n",
+    "restaurant_df[\"keys\"].nunique()"
    ]
   },
   {
@@ -292,14 +286,6 @@
    "source": [
     "# Drop duplicates in restaurant\n",
     "restaurant_df.drop_duplicates(subset =\"keys\", keep = 'first', inplace = True) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Validating cleanned dataframe\n",
-    "#### The total counts has been reduced from 10,000 to 9343. "
    ]
   },
   {
@@ -337,6 +323,7 @@
     }
    ],
    "source": [
+    "# The total count has been reduced from 10,000 to 9343. \n",
     "restaurant_df.info()"
    ]
   },
@@ -344,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  Following section will perform transformation: some zip_codes are in xxxx-xxx format. They need to be diced to match the standard format. Digits after - will be ignored. "
+    "####  Some zip_codes are in xxxxx-xxxx format. They need to be diced to match the standard format. Digits after '-' will be dropped."
    ]
   },
   {
@@ -354,7 +341,7 @@
    "outputs": [],
    "source": [
     "# Cleanse ZIP Code to retain only 5 characters\n",
-    "restaurant_df[\"postalCode\"] = restaurant_df[\"postalCode\"].apply(lambda x: x.split(\"-\")[0])"
+    "restaurant_df[\"postalCode\"] = restaurant_df[\"postalCode\"].apply(lambda x: x.split(\"-\")[0].strip())"
    ]
   },
   {
@@ -366,7 +353,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 5\n"
+      "5 5\n"
      ]
     }
    ],
@@ -377,113 +364,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>dateAdded</th>\n",
-       "      <th>dateUpdated</th>\n",
-       "      <th>address</th>\n",
-       "      <th>categories</th>\n",
-       "      <th>city</th>\n",
-       "      <th>country</th>\n",
-       "      <th>keys</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>name</th>\n",
-       "      <th>postalCode</th>\n",
-       "      <th>province</th>\n",
-       "      <th>sourceURLs</th>\n",
-       "      <th>websites</th>\n",
-       "      <th>zip_check</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5675</th>\n",
-       "      <td>AWOnnZGLRxPSIh2Ru31g</td>\n",
-       "      <td>2018-05-28T16:28:34Z</td>\n",
-       "      <td>2018-05-28T16:28:34Z</td>\n",
-       "      <td>3340 Mall Loop Dr Louis Joliet Mall Louis Joli...</td>\n",
-       "      <td>Fast Food Restaurant</td>\n",
-       "      <td>Joliet</td>\n",
-       "      <td>US</td>\n",
-       "      <td>us/il/joliet/3340mallloopdrlouisjolietmallloui...</td>\n",
-       "      <td>41.575031</td>\n",
-       "      <td>-88.156167</td>\n",
-       "      <td>KFC</td>\n",
-       "      <td>60431</td>\n",
-       "      <td>IL</td>\n",
-       "      <td>https://foursquare.com/v/kfc/4bc8a87692b376b09...</td>\n",
-       "      <td>http://www.kfc.com</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        id             dateAdded           dateUpdated  \\\n",
-       "5675  AWOnnZGLRxPSIh2Ru31g  2018-05-28T16:28:34Z  2018-05-28T16:28:34Z   \n",
-       "\n",
-       "                                                address            categories  \\\n",
-       "5675  3340 Mall Loop Dr Louis Joliet Mall Louis Joli...  Fast Food Restaurant   \n",
-       "\n",
-       "        city country                                               keys  \\\n",
-       "5675  Joliet      US  us/il/joliet/3340mallloopdrlouisjolietmallloui...   \n",
-       "\n",
-       "       latitude  longitude name postalCode province  \\\n",
-       "5675  41.575031 -88.156167  KFC      60431       IL   \n",
-       "\n",
-       "                                             sourceURLs            websites  \\\n",
-       "5675  https://foursquare.com/v/kfc/4bc8a87692b376b09...  http://www.kfc.com   \n",
-       "\n",
-       "      zip_check  \n",
-       "5675          6  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Identify row where ZIP Code is 6 characters long\n",
-    "restaurant_df.loc[restaurant_df['zip_check'] == 6]"
+    "#### Data normalisation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### There appears to be a hidden character resulting in the count equally to 6. It would appear that by splitting the \"-\", a space has been left after 1. This will be cleansed and tidied up as part of the load process into Postgres SQL if not remove during the de-duplication process."
+    "If keeping zip_code, city and state in the same table, there will be transitive dependency. City and state depend on the restaurant address but also on zip_code. Hence to achieve the Third Normal Form, we'll put zip, city and state into a seperate table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +452,7 @@
        "5      48204       Detroit       MI"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,15 +464,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Transformation: rename the columns so that columns will be consistant throughout database "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -620,16 +509,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5427"
+       "5426"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +612,7 @@
        "6    48235       Detroit    MI"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,12 +635,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Transformation: save resturant dataframe to a new dataframe, so unnecessary columsn will be dropped "
+    "#### Save the restaurant dataframe into a new dataframe, so unnecessary columns will be dropped "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -811,86 +700,41 @@
        "      <td>9768 Grand River Ave</td>\n",
        "      <td>48204</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9995</th>\n",
-       "      <td>Pizza Hut</td>\n",
-       "      <td>3460 Robinhood Rd</td>\n",
-       "      <td>27106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9996</th>\n",
-       "      <td>Pizza Hut</td>\n",
-       "      <td>3069 Kernersville Rd</td>\n",
-       "      <td>27107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>Pizza Hut</td>\n",
-       "      <td>838 S Main St</td>\n",
-       "      <td>27284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>Pizza Hut</td>\n",
-       "      <td>1702 Glendale Dr SW</td>\n",
-       "      <td>27893</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>Pizza Hut</td>\n",
-       "      <td>1405 W Broad St</td>\n",
-       "      <td>28337</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9343 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                name               address postalCode\n",
-       "0     SONIC Drive In      800 N Canal Blvd      70301\n",
-       "2          Taco Bell   206 Wears Valley Rd      37863\n",
-       "3             Arby's          3652 Parkway      37863\n",
-       "4     Steak 'n Shake  2118 Mt Zion Parkway      30260\n",
-       "5            Wendy's  9768 Grand River Ave      48204\n",
-       "...              ...                   ...        ...\n",
-       "9995       Pizza Hut     3460 Robinhood Rd      27106\n",
-       "9996       Pizza Hut  3069 Kernersville Rd      27107\n",
-       "9997       Pizza Hut         838 S Main St      27284\n",
-       "9998       Pizza Hut   1702 Glendale Dr SW      27893\n",
-       "9999       Pizza Hut       1405 W Broad St      28337\n",
-       "\n",
-       "[9343 rows x 3 columns]"
+       "             name               address postalCode\n",
+       "0  SONIC Drive In      800 N Canal Blvd      70301\n",
+       "2       Taco Bell   206 Wears Valley Rd      37863\n",
+       "3          Arby's          3652 Parkway      37863\n",
+       "4  Steak 'n Shake  2118 Mt Zion Parkway      30260\n",
+       "5         Wendy's  9768 Grand River Ave      48204"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Save resturant dataframe to a new dataframe\n",
+    "# Save restaurant dataframe to a new dataframe\n",
     "\n",
     "restaurant_clean_df = restaurant_df[[\"name\",\"address\",\"postalCode\"]]\n",
-    "restaurant_clean_df"
+    "restaurant_clean_df.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Transformation: rename the columns so that columns will be consistant throughout database "
+    "#### Rename the columns so that columns will be consistant throughout database "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -914,8 +758,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Restaurant name</th>\n",
-       "      <th>Address</th>\n",
+       "      <th>restaurant_name</th>\n",
+       "      <th>address</th>\n",
        "      <th>zip_code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -992,7 +836,7 @@
        "</div>"
       ],
       "text/plain": [
-       "     Restaurant name               Address zip_code\n",
+       "     restaurant_name               address zip_code\n",
        "0     SONIC Drive In      800 N Canal Blvd    70301\n",
        "2          Taco Bell   206 Wears Valley Rd    37863\n",
        "3             Arby's          3652 Parkway    37863\n",
@@ -1008,19 +852,19 @@
        "[9343 rows x 3 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "restaurant_clean_df = restaurant_clean_df.rename(columns={\"name\":\"restaurant name\", \"address\":\"address\", \"postalCode\":\"zip_code\"})\n",
+    "restaurant_clean_df = restaurant_clean_df.rename(columns={\"name\":\"restaurant_name\", \"address\":\"address\", \"postalCode\":\"zip_code\"})\n",
     "restaurant_clean_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
