Minor Edit to Index

--- a/02_transform_census/02_transform_census_pooja.ipynb
+++ b/02_transform_census/02_transform_census_pooja.ipynb
@@ -1621,7 +1621,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1894,11 +1896,203 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ZCTA</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Median Age</th>\n",
+       "      <th>Median Household Income</th>\n",
+       "      <th>Per Capita Income</th>\n",
+       "      <th>Poverty Count</th>\n",
+       "      <th>Unemployment Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00601</td>\n",
+       "      <td>17242</td>\n",
+       "      <td>40.5</td>\n",
+       "      <td>13092.0</td>\n",
+       "      <td>6999.0</td>\n",
+       "      <td>10772</td>\n",
+       "      <td>2316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00602</td>\n",
+       "      <td>38442</td>\n",
+       "      <td>42.3</td>\n",
+       "      <td>16358.0</td>\n",
+       "      <td>9277.0</td>\n",
+       "      <td>19611</td>\n",
+       "      <td>1927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00603</td>\n",
+       "      <td>48814</td>\n",
+       "      <td>41.1</td>\n",
+       "      <td>16603.0</td>\n",
+       "      <td>11307.0</td>\n",
+       "      <td>24337</td>\n",
+       "      <td>3124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00606</td>\n",
+       "      <td>6437</td>\n",
+       "      <td>43.3</td>\n",
+       "      <td>12832.0</td>\n",
+       "      <td>5943.0</td>\n",
+       "      <td>4163</td>\n",
+       "      <td>230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00610</td>\n",
+       "      <td>27073</td>\n",
+       "      <td>42.1</td>\n",
+       "      <td>19309.0</td>\n",
+       "      <td>10220.0</td>\n",
+       "      <td>11724</td>\n",
+       "      <td>1290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32520</th>\n",
+       "      <td>99922</td>\n",
+       "      <td>330</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>34028.0</td>\n",
+       "      <td>18213.0</td>\n",
+       "      <td>129</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32521</th>\n",
+       "      <td>99925</td>\n",
+       "      <td>927</td>\n",
+       "      <td>43.6</td>\n",
+       "      <td>57375.0</td>\n",
+       "      <td>25840.0</td>\n",
+       "      <td>172</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32522</th>\n",
+       "      <td>99926</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>34.5</td>\n",
+       "      <td>53409.0</td>\n",
+       "      <td>22453.0</td>\n",
+       "      <td>235</td>\n",
+       "      <td>138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32523</th>\n",
+       "      <td>99927</td>\n",
+       "      <td>38</td>\n",
+       "      <td>55.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13658.0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32524</th>\n",
+       "      <td>99929</td>\n",
+       "      <td>2484</td>\n",
+       "      <td>49.5</td>\n",
+       "      <td>57583.0</td>\n",
+       "      <td>31489.0</td>\n",
+       "      <td>192</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32525 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ZCTA  Population  Median Age  Median Household Income  \\\n",
+       "0      00601       17242        40.5                  13092.0   \n",
+       "1      00602       38442        42.3                  16358.0   \n",
+       "2      00603       48814        41.1                  16603.0   \n",
+       "3      00606        6437        43.3                  12832.0   \n",
+       "4      00610       27073        42.1                  19309.0   \n",
+       "...      ...         ...         ...                      ...   \n",
+       "32520  99922         330        39.5                  34028.0   \n",
+       "32521  99925         927        43.6                  57375.0   \n",
+       "32522  99926        1635        34.5                  53409.0   \n",
+       "32523  99927          38        55.5                      NaN   \n",
+       "32524  99929        2484        49.5                  57583.0   \n",
+       "\n",
+       "       Per Capita Income  Poverty Count  Unemployment Count  \n",
+       "0                 6999.0          10772                2316  \n",
+       "1                 9277.0          19611                1927  \n",
+       "2                11307.0          24337                3124  \n",
+       "3                 5943.0           4163                 230  \n",
+       "4                10220.0          11724                1290  \n",
+       "...                  ...            ...                 ...  \n",
+       "32520            18213.0            129                  11  \n",
+       "32521            25840.0            172                  89  \n",
+       "32522            22453.0            235                 138  \n",
+       "32523            13658.0             28                   0  \n",
+       "32524            31489.0            192                  67  \n",
+       "\n",
+       "[32525 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reset the index\n",
+    "clean_census = clean_census.reset_index(drop=True)\n",
+    "clean_census"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 32525 entries, 0 to 32524\n",
+      "RangeIndex: 32525 entries, 0 to 32524\n",
       "Data columns (total 7 columns):\n",
       " #   Column                   Non-Null Count  Dtype  \n",
       "---  ------                   --------------  -----  \n",
@@ -1910,7 +2104,7 @@
       " 5   Poverty Count            32525 non-null  int32  \n",
       " 6   Unemployment Count       32525 non-null  int32  \n",
       "dtypes: float64(3), int32(3), object(1)\n",
-      "memory usage: 1.6+ MB\n"
+      "memory usage: 1.4+ MB\n"
      ]
     }
    ],
@@ -1921,7 +2115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
